More work on format and content.

--- a/martin_cv.tex
+++ b/martin_cv.tex
@@ -28,10 +28,25 @@ Praha\\
 \section*{Objective}
 Find a job.
 
+\section*{Education}
+\begin{tabular}{L!{\VRule}R}
+    2010 -- 2013&Left Physiscs at MFF UK in second year.\\
+    2013 -- 2016&Expelled after failing subject in sixth semester at FEL ČVUT.\\
+\end{tabular}
+
+\section*{Languages}
+\begin{tabular}{L!{\VRule}R}
+    Slovak&(mother tongue)\\
+    English&Fluent (B2)\\
+    German&Fluent (B2)\\
+\end{tabular}
+
 \section*{Professional Experience}
 \begin{tabular}{L!{\VRule}R}
-1.11.2016--today&{\bf Work at company XY.}\\
-6 years a slave\\
+    1.11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\[5pt]
+    &Mainly experienced with python, bash, linux, docker, Universal Robots programming,\\
+    &Siemens TIA Portal programming and automation.\\
+    &Beginner or intermediate at Torch, PostgreSQL, Arduino\\
 \end{tabular}
 
 \pagenumbering{gobble}
