--- a/cz_martin_cicmanec_cv.tex
+++ b/cz_martin_cicmanec_cv.tex
@@ -1,8 +1,9 @@
 \documentclass[10pt]{article}
 \usepackage{array, xcolor, bibentry}
 \usepackage[margin=1cm]{geometry}
+\usepackage{hyperref}
 
-\title{\bfseries\Huge Martin Čičmanec}
+\title{\bfseries\Huge CV - Martin Čičmanec}
 \author{martin.cicmanec.47@gmail.com}
 \date{}
 
@@ -20,13 +21,15 @@ Czech Republic
 \end{minipage}
 \begin{minipage}[ht]{0.48\textwidth}
 Praha\\
-\date{10-12-2022}\\
+\date{20-02-2023}\\
 +421 948 725 688
 \end{minipage}
 \vspace{20pt}
 
-\section*{Objective}
-Find a job.
+\section*{Summary}
+    For tha past six years, I worked on many projects, from PLC programming, robot programming to
+    designing a complete Python system running inference on an Edge PC. This was done in a small
+    startup company but I feel it is time to move on and tackle new challenges.
 
 \section*{Education}
 \begin{tabular}{L!{\VRule}R}
@@ -34,19 +37,25 @@ Find a job.
     2013 -- 2016&Expelled after failing subject in sixth semester at FEL ČVUT.\\
 \end{tabular}
 
-\section*{Languages}
-\begin{tabular}{L!{\VRule}R}
-    Slovak&(mother tongue)\\
-    English&Fluent (B2)\\
-    German&Fluent (B2)\\
-\end{tabular}
-
 \section*{Professional Experience}
 \begin{tabular}{L!{\VRule}R}
     1.11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\[5pt]
     &Mainly experienced with python, bash, linux, docker, Universal Robots programming,\\
     &Siemens TIA Portal programming and automation.\\
-    &Beginner or intermediate at Torch, PostgreSQL, Arduino\\
+    &Beginner at Torch, ROS and PostgreSQL\\
+\end{tabular}
+
+\section*{Big projects worked on}
+\begin{tabular}{L!{\VRule}R}
+    &\href{https://www.youtube.com/watch?v=OJSRanzvh8g}{Magic Eye preventative maintenance}\\
+    &\href{https://www.youtube.com/watch?v=bp4fXCKxH9c}{Vision system for Production Cell 4.0}\\
+\end{tabular}
+
+\section*{Languages}
+\begin{tabular}{L!{\VRule}R}
+    Slovak&(mother tongue)\\
+    English&Fluent (B2)\\
+    German&Fluent (B2)\\
 \end{tabular}
 
 \pagenumbering{gobble}
