--- a/en_martin_cicmanec_cv.tex
+++ b/en_martin_cicmanec_cv.tex
@@ -9,7 +9,7 @@
 
 \definecolor{lightgray}{gray}{0.8}
 \newcolumntype{L}{>{\raggedleft}p{0.14\textwidth}}
-\newcolumntype{R}{p{0.8\textwidth}}
+\newcolumntype{R}{p{0.9\textwidth}}
 \newcommand\VRule{\color{lightgray}\vrule width 0.5pt}
 
 \begin{document}
@@ -21,7 +21,7 @@ Czech Republic
 \end{minipage}
 \begin{minipage}[ht]{0.48\textwidth}
 Praha\\
-\date{20-02-2023}\\
+\date{20.02.2023}\\
 +421 948 725 688
 \end{minipage}
 \vspace{20pt}
@@ -39,7 +39,9 @@ Praha\\
 
 \section*{Professional Experience}
 \begin{tabular}{L!{\VRule}R}
-    1.11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\[5pt]
+    4.2015 -- 6.2016 &{\bf Junior JAVA Developer at Certicon.}\\[5pt]
+    &Part time job during studies, mainly JAVA programming.\\
+    11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\[5pt]
     &Mainly experienced with python, bash, linux, docker, Universal Robots programming,\\
     &Siemens TIA Portal programming and automation.\\
     &Beginner at Torch, ROS and PostgreSQL\\
@@ -47,9 +49,15 @@ Praha\\
 
 \section*{Big projects worked on}
 \begin{tabular}{L!{\VRule}R}
-    &\href{https://www.youtube.com/watch?v=OJSRanzvh8g}{Magic Eye preventative maintenance}\\
-    &\href{https://www.youtube.com/watch?v=bp4fXCKxH9c}{Vision system for Production Cell 4.0}\\
+    &Magic Eye preventative maintenance (\href{https://youtu.be/OJSRanzvh8g}{https://youtu.be/OJSRanzvh8g})\\
+    &Vision system for Production Cell 4.0 (\href{https://youtu.be/bp4fXCKxH9c}{https://youtu.be/bp4fXCKxH9c})\\
 \end{tabular}
+
+\section*{Big projects worked on}
+\begin{minipage}[ht]{0.8\textwidth}
+    Magic Eye preventative maintenance (\href{https://youtu.be/OJSRanzvh8g}{https://youtu.be/OJSRanzvh8g})\\
+    Vision system for Production Cell 4.0 (\href{https://youtu.be/bp4fXCKxH9c}{https://youtu.be/bp4fXCKxH9c})\\
+\end{minipage}
 
 \section*{Languages}
 \begin{tabular}{L!{\VRule}R}
