Found a solution to tabbing entire sections.

--- a/en_martin_cicmanec_cv.tex
+++ b/en_martin_cicmanec_cv.tex
@@ -3,6 +3,7 @@
 \usepackage[margin=1cm]{geometry}
 \usepackage{hyperref}
 
+
 \title{\bfseries\Huge CV - Martin Čičmanec}
 \author{martin.cicmanec.47@gmail.com}
 \date{}
@@ -27,43 +28,39 @@ Praha\\
 \vspace{20pt}
 
 \section*{Summary}
-    For tha past six years, I worked on many projects, from PLC programming, robot programming to
-    designing a complete Python system running inference on an Edge PC. This was done in a small
-    startup company but I feel it is time to move on and tackle new challenges.
+\hfill\begin{minipage}{\dimexpr\textwidth-2em}
+For tha past six years, I worked on many projects, from PLC programming, six-axis robot arm programming
+to designing the majority of a Python system running inference on an Edge PC. This was done in a small
+startup company but I feel it is time to move on and tackle new challenges.
+\end{minipage}
 
 \section*{Education}
 \begin{tabular}{L!{\VRule}R}
-    2010 -- 2013&Left Physiscs at MFF UK in second year.\\
-    2013 -- 2016&Expelled after failing subject in sixth semester at FEL ČVUT.\\
+2010 -- 2013&(Unfinished) Left Physiscs at MFF UK in second grade.\\
+2013 -- 2016&(Unfinished) Expelled after failing subject in sixth semester at FEL ČVUT.\\
 \end{tabular}
 
 \section*{Professional Experience}
 \begin{tabular}{L!{\VRule}R}
-    4.2015 -- 6.2016 &{\bf Junior JAVA Developer at Certicon.}\\[5pt]
-    &Part time job during studies, mainly JAVA programming.\\
-    11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\[5pt]
-    &Mainly experienced with python, bash, linux, docker, Universal Robots programming,\\
-    &Siemens TIA Portal programming and automation.\\
-    &Beginner at Torch, ROS and PostgreSQL\\
+4.2015 -- 6.2016 &{\bf Junior JAVA Developer at Certicon.}\\
+&Part time job during studies, mainly JAVA programming.\\[5pt]
+11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\
+&Mainly experienced with python, bash, linux, docker, Universal Robots programming,\\
+&Siemens TIA Portal programming and automation.\\
+&Beginner at Torch, ROS and PostgreSQL\\[5pt]
 \end{tabular}
 
-\section*{Big projects worked on}
-\begin{tabular}{L!{\VRule}R}
-    &Magic Eye preventative maintenance (\href{https://youtu.be/OJSRanzvh8g}{https://youtu.be/OJSRanzvh8g})\\
-    &Vision system for Production Cell 4.0 (\href{https://youtu.be/bp4fXCKxH9c}{https://youtu.be/bp4fXCKxH9c})\\
-\end{tabular}
-
-\section*{Big projects worked on}
-\begin{minipage}[ht]{0.8\textwidth}
-    Magic Eye preventative maintenance (\href{https://youtu.be/OJSRanzvh8g}{https://youtu.be/OJSRanzvh8g})\\
-    Vision system for Production Cell 4.0 (\href{https://youtu.be/bp4fXCKxH9c}{https://youtu.be/bp4fXCKxH9c})\\
+\section*{Previous notable projects}
+\hfill\begin{minipage}{\dimexpr\textwidth-2em}
+Magic Eye preventative maintenance (\href{https://youtu.be/OJSRanzvh8g}{https://youtu.be/OJSRanzvh8g})\\
+Vision system for Production Cell 4.0 (\href{https://youtu.be/bp4fXCKxH9c}{https://youtu.be/bp4fXCKxH9c})\\
 \end{minipage}
 
 \section*{Languages}
 \begin{tabular}{L!{\VRule}R}
-    Slovak&(mother tongue)\\
-    English&Fluent (B2)\\
-    German&Fluent (B2)\\
+Slovak&(mother tongue)\\
+English&Fluent (B2)\\
+German&Fluent (B2)\\
 \end{tabular}
 
 \pagenumbering{gobble}
