--- a/cz_martin_cicmanec_cv.tex
+++ b/cz_martin_cicmanec_cv.tex
@@ -48,7 +48,7 @@
     4.2015 -- 6.2016 &{\bf Junior JAVA Developer ve firmě Certicon.}\\
     &Brigáda popři studiu. Převažně JAVA programování.\\[5pt]
     11.2016 -- today&{\bf Python vývojář ve firmě Optisolutions s.r.o.}\\
-    &Především zkušenosti s Python, Bash, Linux, Docker, Universal Robots programování,\\
+    &Především zkušenosti s Python, Bash, Linux, Git, Redis, Docker, Universal Robots programování,\\
     &Siemens TIA Portal programování a automatizace.\\
     &Začátečník s Torch, ROS a PostgreSQL\\[5pt]
 \end{tabular}
@@ -71,7 +71,7 @@
 \hfill\begin{minipage}{\dimexpr\textwidth-2em}
     Posledních 6 let jsem pracoval narůzných projektech, od průmyslové automatizace, přes řízení\\
     šestiosých robotů až po návrh a implementaci Python EdgePC systému pro inferenci.\\
-    Preferuji programování v jazyku Python a v systému Linux. Musel jsem se však několik krát\\
+    Preferuji programování v jazyku Python a v systému Linux. Ale musel jsem se už několik krát\\
     za krátkou dobu naučit pracovat v novém jazyce/systému.\\
 \end{minipage}
 
