--- a/en_martin_cicmanec_cv.tex
+++ b/en_martin_cicmanec_cv.tex
@@ -31,7 +31,7 @@
 \begin{minipage}[ht]{0.48\textwidth}
     \raggedleft
     Praha\\
-    \date{28.02.2023}\\
+    \date{15.03.2023}\\
     +421 948 725 688
 \end{minipage}
 \vspace{20pt}
@@ -48,9 +48,10 @@
     4.2015 -- 6.2016 &{\bf Junior JAVA Developer at Certicon.}\\
     &Part time job during studies, mainly JAVA programming.\\[5pt]
     11.2016 -- today&{\bf Python developer at Optisolutions s.r.o.}\\
-    &Mainly experienced with Python, Bash, Linux, Docker, Universal Robots programming,\\
+    &Mainly experienced with Python, Bash, Linux, Git, Redis, Docker\\
+    &OPC-UA, Snap7, Universal Robots programming,\\
     &Siemens TIA Portal programming and automation.\\
-    &Beginner at Torch, ROS and PostgreSQL\\[5pt]
+    &Some experience with Torch, ROS, C, C++ and PostgreSQL\\[5pt]
 \end{tabular}
 
 \section*{Previous notable projects}
@@ -69,11 +70,14 @@
 
 \section*{Summary}
 \hfill\begin{minipage}{\dimexpr\textwidth-2em}
-    For tha past six years, I worked on many projects, from PLC programming, six-axis robot arm programming,\\
+    For the past six years, I worked on many projects, from PLC programming, six-axis robot arm programming,\\
     to designing the majority of a Python system running inference on an Edge PC. I prefer Python and the\\
     Linux system, but several times during my current job, I had to switch to a new language/system\\
     and produce results in a relatively short time.\\
 \end{minipage}
+
+\vspace{1cm}
+\begin{center}\scriptsize{Made in \LaTeX}\end{center}
 
 \pagenumbering{gobble}
 
