--- a/cz_martin_cicmanec_cv.tex
+++ b/cz_martin_cicmanec_cv.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt]{article}
+\documentclass[8pt]{article}
 \usepackage{array, xcolor, bibentry}
 \usepackage[margin=1cm]{geometry}
 \usepackage{hyperref}
@@ -7,12 +7,12 @@
 \pdfinfo{
    /Author (Martin Čičmanec)
    /Title  (Curriculum Vitae)
-   /CreationDate (D:20230228195600)
+   /CreationDate (D:20230430195600)
    /Subject (CV for job applications)
    /Keywords (PDF;LaTeX;CV;IT;Python;Linux)
 }
 
-\title{\bfseries\Huge CV - Martin Čičmanec}
+\title{\bfseries\Large CV - Martin Čičmanec}
 \author{martin.cicmanec.47@gmail.com}
 \date{}
 
@@ -29,28 +29,38 @@
     Czech Republic
 \end{minipage}
 \begin{minipage}[ht]{0.48\textwidth}
-    \raggedleft
-    Praha\\
-    \date{28.02.2023}\\
+    \raggedleft Praha\\
+    \date{30.04.2023}\\
     +421 948 725 688
 \end{minipage}
-\vspace{20pt}
+\vspace{10pt}
 
 \section*{Vzdělání}
 \begin{tabular}{L!{\VRule}R}
-    2010 -- 2013&(Nedokončeno) MFF UK, Fyzika - Studium zanecháno ve druhém ročníku.\\
-    2013 -- 2016&(Nedokončeno) ČVUT FEL, Otevřená Informatika - Nesplnění podmínek k zápočtu v šestém semestru,\\
-    &ukončení studia.\\
+    2010 -- 2013&(Nedokončeno) MFF UK, Fyzika - Nevhodný výběr oboru. Objevil jsem svůj zájem o IT.\\
+    2013 -- 2016&(Nedokončeno) ČVUT FEL, Otevřená Informatika - Znalosti, které jsem získal během svého studia.\\
+        &mi poskytly neocenitelné zkušenosti, které jsem využil ke svému profesnímu i osobnímu růstu.\\
+        &Tyto zkušenosti mě přesvědčily, že pro mě má praxe větší přínos než teoretické studium,\\
+        &a proto jsem se rozhodl studium ukončit a věnovat se praxi a samostudiu.\\
 \end{tabular}
 
 \section*{Profesionální zkušenosti}
 \begin{tabular}{L!{\VRule}R}
     4.2015 -- 6.2016 &{\bf Junior JAVA Developer ve firmě Certicon.}\\
-    &Brigáda popři studiu. Převažně JAVA programování.\\[5pt]
+    &Brigáda popři studiu. Převažně JAVA programování.\\
+    &Práce na komunikačním JAVA modulu pro PLC TECO.\\
+    &Vývoj multiagentního systému JAVA JADE pro vyjednávaní optimálního odběru energí domácností.\\
+    &JAVA projekt pro zjednodušení a automatizaci psaní skriptů simulačního nástroje GridSim.\\[5pt]
     11.2016 -- today&{\bf Python vývojář ve firmě Optisolutions s.r.o.}\\
-    &Především zkušenosti s Python, Bash, Linux, Git, Redis, Docker, Universal Robots programování,\\
-    &Siemens TIA Portal programování a automatizace.\\
-    &Začátečník s Torch, ROS a PostgreSQL\\[5pt]
+    &Množstvo zkušeností s Python, OpenCV, NumPy, akvizice fotek, inference v Torch.\\
+    &Spolupráce s PostgreSQL databázemi a web aplikacemi.\\
+    &Linux, Bash - správa a nastavení systémů, nasazovaní v produkci, virtualizace Qemu/KVM.\\
+    &Docker - vývoj multikontejnerových aplikací.\\
+    &Universal Robots programování robotů, jejich integrace do ROS prostrědí,\\
+    &vývoj řídícího Python ROS modulu a simulace projektu v Gazebo.\\
+    &Siemens TIA Portal programování a automatizace. Práce na systémech S7-1500, S7-1200 a LOGO!.\\
+    &Komunikace PLC-PLC a PLC-PC přes Profinet, I-Device, Profibus, TCP, Snap7, OPC-UA, ADS.\\
+    &Programování pohonů a lineárů Sinamics, Simotion a Rexroth.\\[5pt]
 \end{tabular}
 
 \section*{Zajímavé předchozí projekty}
@@ -69,10 +79,9 @@
 
 \section*{Shrnutí}
 \hfill\begin{minipage}{\dimexpr\textwidth-2em}
-    Posledních 6 let jsem pracoval narůzných projektech, od průmyslové automatizace, přes řízení\\
-    šestiosých robotů až po návrh a implementaci Python EdgePC systému pro inferenci.\\
-    Preferuji programování v jazyku Python a v systému Linux. Ale musel jsem se už několik krát\\
-    za krátkou dobu naučit pracovat v novém jazyce/systému.\\
+    Více než šest let jsem pracoval na mnohých různorodých projektech, od průmyslové automatizace, přes řízení\\
+    šestiosých robotů až po návrh a implementaci Python EdgePC systému běžícím v Docker kontejnerech.\\
+    Během své práce jsem se často setkával s novými technologiemi a musel jsem je za krátkou dobu ovládnout a aplikovat.\\
 \end{minipage}
 
 \pagenumbering{gobble}
