Small recommended fixes.

--- a/cz_martin_cicmanec_cv.tex
+++ b/cz_martin_cicmanec_cv.tex
@@ -38,10 +38,10 @@
 \section*{Vzdělání}
 \begin{tabular}{L!{\VRule}R}
     2010 -- 2013&(Nedokončeno) MFF UK, Fyzika - Nevhodný výběr oboru. Objevil jsem svůj zájem o IT.\\
-    2013 -- 2016&(Nedokončeno) ČVUT FEL, Otevřená Informatika - Znalosti, které jsem získal během svého studia.\\
-        &mi poskytly neocenitelné zkušenosti, které jsem využil ke svému profesnímu i osobnímu růstu.\\
-        &Tyto zkušenosti mě přesvědčily, že pro mě má praxe větší přínos než teoretické studium,\\
-        &a proto jsem se rozhodl studium ukončit a věnovat se praxi a samostudiu.\\
+    2013 -- 2016&(Nedokončeno) ČVUT FEL, Otevřená Informatika - Znalosti, které jsem získal během\\
+        &svého studia mi poskytly neocenitelné zkušenosti, které jsem využil ke svému profesnímu\\
+        &i osobnímu růstu. Tyto zkušenosti mě přesvědčily, že pro mě má praxe větší přínos než\\
+        &teoretické studium, a proto jsem se rozhodl studium ukončit a věnovat se praxi a samostudiu.\\
 \end{tabular}
 
 \section*{Profesionální zkušenosti}
@@ -49,18 +49,18 @@
     4.2015 -- 6.2016 &{\bf Junior JAVA Developer ve firmě Certicon.}\\
     &Brigáda popři studiu. Převažně JAVA programování.\\
     &Práce na komunikačním JAVA modulu pro PLC TECO.\\
-    &Vývoj multiagentního systému JAVA JADE pro vyjednávaní optimálního odběru energí domácností.\\
+    &Vývoj multiagentního systému JAVA JADE pro vyjednávaní optimálního odběru energie domácností.\\
     &JAVA projekt pro zjednodušení a automatizaci psaní skriptů simulačního nástroje GridSim.\\[5pt]
     11.2016 -- today&{\bf Python vývojář ve firmě Optisolutions s.r.o.}\\
-    &Množstvo zkušeností s Python, OpenCV, NumPy, akvizice fotek, inference v Torch.\\
+    &Mnoho zkušeností s Python, OpenCV, NumPy, akvizice fotek, inference v Torch.\\
     &Spolupráce s PostgreSQL databázemi a web aplikacemi.\\
     &Linux, Bash - správa a nastavení systémů, nasazovaní v produkci, virtualizace Qemu/KVM.\\
     &Docker - vývoj multikontejnerových aplikací.\\
-    &Universal Robots programování robotů, jejich integrace do ROS prostrědí,\\
-    &vývoj řídícího Python ROS modulu a simulace projektu v Gazebo.\\
+    &Universal Robots programování robotů, jejich integrace do ROS prostrědí.\\
+    &Vývoj řídícího Python ROS modulu a simulace projektu v Gazebo.\\
     &Siemens TIA Portal programování a automatizace. Práce na systémech S7-1500, S7-1200 a LOGO!.\\
     &Komunikace PLC-PLC a PLC-PC přes Profinet, I-Device, Profibus, TCP, Snap7, OPC-UA, ADS.\\
-    &Programování pohonů a lineárů Sinamics, Simotion a Rexroth.\\[5pt]
+    &Programování víceosých pohonů Sinamics, Simotion a Rexroth.\\[5pt]
 \end{tabular}
 
 \section*{Zajímavé předchozí projekty}
@@ -79,8 +79,8 @@
 
 \section*{Shrnutí}
 \hfill\begin{minipage}{\dimexpr\textwidth-2em}
-    Více než šest let jsem pracoval na mnohých různorodých projektech, od průmyslové automatizace, přes řízení\\
-    šestiosých robotů až po návrh a implementaci Python EdgePC systému běžícím v Docker kontejnerech.\\
+    Více než šest let jsem pracoval na mnohých různorodých projektech, od průmyslové automatizace,\\
+    přes řízení šestiosých robotů až po návrh a implementaci Python EdgePC systému běžícím v Docker kontejnerech.\\
     Během své práce jsem se často setkával s novými technologiemi a musel jsem je za krátkou dobu ovládnout a aplikovat.\\
 \end{minipage}
 
